# mitsubishi-cn105-homekit

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  partitions_4mb.csv  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c6
.github/workflows/: build.yml  firmware-release.yml
docs/: custom-boards.md  homekit.md  project-structure.md  protocol.md
docs/plans/: 2026-03-10-ble-remote-temp-design.md  2026-03-10-ble-remote-temp-plan.md
include/: ble_config.h  ble_decoders.h  ble_sensor.h  board_profile.h  branding.h  cn105_protocol.h  hardware_uart.h  homekit_services.h  icon_192_png.h  icon_512_png.h  logging.h  settings.h  status_led.h  uart_interface.h  web_server.h  web_ui_html.h.brand  wifi_recovery.h
include/boards/: board_esp32s3_devkit.h  board_m5atoms3_lite.h  board_nanoc6.h
main/: CMakeLists.txt  ble_sensor.cpp  ble_sensor.h  board_profile.h  branding.h  cn105_protocol.cpp  cn105_protocol.h  cn105_strings.h  compat_arduino.h  dns_server.cpp  dns_server.h  esp_utils.h  hardware_uart.h  homekit_fan.cpp  homekit_services.h  homekit_services_glue.cpp  homekit_setup.cpp  homekit_setup.h  homekit_stub.cpp  homekit_stub.h  homekit_switches.cpp  homekit_thermostat.cpp  json_utils.h  logging.cpp  logging.h  main.cpp  settings.cpp  settings.h  status_led.cpp  status_led.h  uart_interface.h  web_ota.cpp  web_server.cpp  web_server.h  web_ws.cpp  wifi_manager.cpp  wifi_manager.h  wifi_recovery.cpp  wifi_recovery.h
main/boards/: board_esp32_devkit.h  board_esp32c3_mini.h  board_esp32s3_devkit.h  board_m5atoms3_lite.h  board_nanoc6.h
scripts/: embed_binary.py  embed_html.py  embed_html_idf.py  pre_build.py
src/: ble_sensor.cpp  cn105_protocol.cpp  homekit_fan.cpp  homekit_services.cpp  homekit_switches.cpp  homekit_thermostat.cpp  main.cpp  settings.cpp  status_led.cpp  web_ota.cpp  web_server.cpp  web_ws.cpp  wifi_recovery.cpp
test/stubs/: Arduino.h  HWCDC.h  esp_err.h  library.json  mock_uart.h  stub_globals.cpp
test/stubs/driver/: gpio.h  uart.h
test/test_anti_flicker/: test_anti_flicker.cpp
test/test_checksum/: test_checksum.cpp
test/test_cn105_strings/: test_cn105_strings.cpp
test/test_json_utils/: test_json_utils.cpp
test/test_packet_parsing/: test_packet_parsing.cpp
test/test_status_led/: test_status_led.cpp
test/test_temp_encoding/: test_temp_encoding.cpp
web/: index.html  recovery.html
